--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
     implementation(libs.room.runtime)
     implementation(libs.room.ktx)
     kapt(libs.room.compiler)
+
+    //Coil
+    implementation(libs.coil.compose)
 }
