--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
 
     //Coil
     implementation(libs.coil.compose)
+
+    implementation("com.google.accompanist:accompanist-navigation-animation:0.34.0")
 }
