--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,6 @@ dependencies {
     implementation(libs.coil.compose)
 
     implementation("com.google.accompanist:accompanist-navigation-animation:0.34.0")
+    implementation("androidx.compose.material:material-icons-extended")
+
 }
